// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EmptyListView renders with custom renderRow 1`] = `
<RCTScrollView
  dataSource={
    ListViewDataSource {
      "items": 1,
    }
  }
  emptyText="Nothing. Nothing at all."
  enableEmptySections={true}
  immutableData={
    Immutable.List [
      "",
    ]
  }
  initialListSize={10}
  onContentSizeChange={[Function]}
  onEndReachedThreshold={1000}
  onKeyboardDidHide={undefined}
  onKeyboardDidShow={undefined}
  onKeyboardWillHide={undefined}
  onKeyboardWillShow={undefined}
  onLayout={[Function]}
  onScroll={[Function]}
  pageSize={1}
  removeClippedSubviews={false}
  renderRow={[Function]}
  scrollEventThrottle={50}
  scrollRenderAheadDistance={1000}
  sectionHeaderHasChanged={[Function]}
  stickyHeaderIndices={Array []}
  stickySectionHeadersEnabled={true}
>
  <View>
    <Text
      accessible={true}
      allowFontScaling={true}
      disabled={false}
      ellipsizeMode="tail"
    >
      "Overridden!"
    </Text>
  </View>
</RCTScrollView>
`;

exports[`EmptyListView renders with custom text 1`] = `
<RCTScrollView
  dataSource={
    ListViewDataSource {
      "items": 1,
    }
  }
  emptyText="Nothing. Nothing at all."
  enableEmptySections={true}
  immutableData={
    Immutable.List [
      "",
    ]
  }
  initialListSize={10}
  onContentSizeChange={[Function]}
  onEndReachedThreshold={1000}
  onKeyboardDidHide={undefined}
  onKeyboardDidShow={undefined}
  onKeyboardWillHide={undefined}
  onKeyboardWillShow={undefined}
  onLayout={[Function]}
  onScroll={[Function]}
  pageSize={1}
  removeClippedSubviews={false}
  renderRow={[Function]}
  scrollEventThrottle={50}
  scrollRenderAheadDistance={1000}
  sectionHeaderHasChanged={[Function]}
  stickyHeaderIndices={Array []}
  stickySectionHeadersEnabled={true}
>
  <View>
    <View
      style={
        Object {
          "alignItems": "center",
          "justifyContent": "center",
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
        style={
          Object {
            "fontSize": 14,
            "margin": 12,
          }
        }
      >
        Nothing. Nothing at all.
      </Text>
    </View>
  </View>
</RCTScrollView>
`;

exports[`EmptyListView renders with default text 1`] = `
<RCTScrollView
  dataSource={
    ListViewDataSource {
      "items": 1,
    }
  }
  emptyText="No data."
  enableEmptySections={true}
  immutableData={
    Immutable.List [
      "",
    ]
  }
  initialListSize={10}
  onContentSizeChange={[Function]}
  onEndReachedThreshold={1000}
  onKeyboardDidHide={undefined}
  onKeyboardDidShow={undefined}
  onKeyboardWillHide={undefined}
  onKeyboardWillShow={undefined}
  onLayout={[Function]}
  onScroll={[Function]}
  pageSize={1}
  removeClippedSubviews={false}
  renderRow={[Function]}
  scrollEventThrottle={50}
  scrollRenderAheadDistance={1000}
  sectionHeaderHasChanged={[Function]}
  stickyHeaderIndices={Array []}
  stickySectionHeadersEnabled={true}
>
  <View>
    <View
      style={
        Object {
          "alignItems": "center",
          "justifyContent": "center",
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
        style={
          Object {
            "fontSize": 14,
            "margin": 12,
          }
        }
      >
        No data.
      </Text>
    </View>
  </View>
</RCTScrollView>
`;
